<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <!--  <item
        android:id="@+id/trophy_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_trophy"
        android:title="@string/trophies_label"/>-->

    <item
        android:id="@+id/health_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_monitor_heart"
        android:title="@string/health_label"/>
    <item
        android:id="@+id/progress_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_trending_up"
        android:title="@string/progress_label"/>
    <item
        android:id="@+id/reward_nav_item"
        android:enabled="true"
        android:icon="@drawable/ic_card_giftcard"
        android:title="@string/rewards_label"/>

</menu>