<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:src="@drawable/gift">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reward_name_edit_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary"
            >
        <EditText
            android:id="@+id/reward_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:hint="@string/name"
            android:inputType="text"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            >
        </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reward_price_edit_text_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleTint="@color/colorPrimary"
            >
        <EditText
            android:id="@+id/reward_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"

            android:ems="10"
            android:hint="@string/price"
            android:background="@color/white"
            android:inputType="number"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textCursorDrawable="@color/colorPrimary"
            >
        </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="end">
            <Button
                android:id="@+id/cancel_reward_dialog_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/cancel">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/save">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>