<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.activity.ProfileActivity">
    <include layout="@layout/toolbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_stopping_edit_text_wrapper"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorPrimary"
               >
            <EditText
                android:id="@+id/date_stopping_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/date_stopping"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">
            </EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cigarette_per_day_edit_text_wrapper"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorPrimary"
               >
            <EditText
                android:id="@+id/cigarette_per_day_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/cigarette_per_day"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">
            </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">
                <ImageButton
                    android:id="@+id/cigarette_smoked_decrement_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_remove"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    >
                </ImageButton>
                <ImageButton
                    android:id="@+id/cigarette_smoked_increment_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_plus"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    >
                </ImageButton>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nb_cigarettes_per_pack_edit_text_wrapper"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorPrimary"
                >
            <EditText
                android:id="@+id/nb_cigarettes_per_pack_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/cigarettes_per_pack"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">
            </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">
                <ImageButton
                    android:id="@+id/nb_cigarettes_per_pack_decrement_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_remove"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    >
                </ImageButton>
                <ImageButton
                    android:id="@+id/nb_cigarettes_per_pack_increment_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_plus"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    >
                </ImageButton>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/years_of_smoking_edit_text_wrapper"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorPrimary"
                >
            <EditText
                android:id="@+id/years_of_smoking_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/years_of_smoking"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">
            </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">
                <ImageButton
                    android:id="@+id/years_of_smoking_decrement_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_remove"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    >
                </ImageButton>
                <ImageButton
                    android:id="@+id/years_of_smoking_increment_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_plus"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_gravity="center"
                    >
                </ImageButton>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_per_pack_edit_text_wrapper"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorPrimary"
                >
            <EditText
                android:id="@+id/price_per_pack_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/price_per_pack"
                android:inputType="number"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">
            </EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:layout_gravity="start">
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/devis_spinner_profile"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/devise"
                app:met_primaryColor="@color/colorPrimary"
                app:met_floatingLabel="normal" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical"
        android:layout_gravity="start"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_save"
            android:contentDescription="@string/save_profile" />
    </LinearLayout>
</LinearLayout>